--- a/deployment.yaml
+++ b/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: my-app
-          image: saurabhbagh/ng-app:v3
+          image: nirakarnepal/ng-app:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 80  
