--- a/backend.yaml
+++ b/backend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: my-backend
-          image: saurabhbagh/my-web-app:v1
+          image: saurabhbagh/my-web-app:v2
           imagePullPolicy: Always
           ports:
             - containerPort: 80  
@@ -25,7 +25,7 @@ kind: Service
 metadata:
   name: my-backend
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: my-backend
   ports:
